# npdoc-cli

./: .buildinfo  LICENSE  README.md  dev_environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: deployment.yml  documentation.yml  tests.yml
_downloads/078bf1216accbc9636a0be011d96032e/: plot_e03_docstrings.py
_downloads/23422fca6efed31e8d67e2a1d389596b/: plot_e02_typing.ipynb
_downloads/3889f8cf963a115dda14b603f774bd33/: plot_e01_program.ipynb
_downloads/4357008fa7ed349dccc27bda44e4e810/: plot_e04_commands_subcommands.ipynb
_downloads/7b242773ee772d10b9d6cd431fa933b4/: plot_e04_commands_subcommands.py
_downloads/85e4765961889b2d192674ad96756656/: plot_e05_naming.ipynb
_downloads/87abd6ca365fd42c0e9aa0c31c2f232b/: plot_e05_naming.py
_downloads/a0763cd3799c921c7a33ab49249e078d/: plot_e03_docstrings.ipynb
_downloads/fcbb8e3296d8b6e3bdc7cac362fc2666/: plot_e01_program.py
_sources/: index.rst  sg_execution_times.rst
_sources/auto_examples/: index.rst  plot_e01_program.rst  plot_e02_typing.rst  plot_e03_docstrings.rst  (+3 more)
auto_examples/: index.html  plot_e01_program.html  plot_e02_typing.html  plot_e03_docstrings.html  plot_e04_commands_subcommands.html  plot_e05_naming.html  sg_execution_times.html
autoapi/: index.html
docs/: make.bat
examples/: GALLERY_HEADER.rst  plot_e01_program.py  plot_e04_commands_subcommands.py
tests/: NOTES.txt  snippet_intro_out.txt  test_heirarchy.py  test_snippet_intro.py  test_typing.py
(+55 files in other folders)
