[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "npdoc-cli"
version = "0.0.2"
authors = [
  { name="Cole Gray", email="cole.gray14@gmail.com" },
]
description = "Tool for creating command line interfaces derived from numpy style doc strings."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpydoc>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/d-c-gray/npdoc-cli"
Docs = "https://d-c-gray.github.io/npdoc-cli/"
Issues = "https://github.com/d-c-gray/npdoc-cli/issues"